// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataTable Aktiivisen sarakkeen nimen uudelleen klikkaaminen kääntää järjestyksen 1`] = `
<table
  className="table"
>
  <thead
    className="table__head"
  >
    <tr
      className="table__row"
    >
      <th
        className="table__th"
      >
        <div
          className="table__label"
          onClick={[Function]}
        >
          Nimi
          <span
            className="table__sortindicator table__sortindicator--visible"
          >
            <i
              className="material-icons icon icon--inline"
            >
              arrow_drop_up
            </i>
          </span>
        </div>
      </th>
      <th
        className="table__th"
      >
        <div
          className="table__label"
          onClick={[Function]}
        >
          Oppilaitos
          <span
            className="table__sortindicator"
          />
        </div>
      </th>
    </tr>
  </thead>
  <thead
    className="table__body"
  >
    <tr
      className="table__row"
    >
      <td
        className="table__td"
      >
        Osmo
      </td>
      <td
        className="table__td"
      >
        Celsiuksen koulu
      </td>
    </tr>
    <tr
      className="table__row"
    >
      <td
        className="table__td"
      >
        Heli
      </td>
      <td
        className="table__td"
      >
        Beetakaroteenikoulu
      </td>
    </tr>
    <tr
      className="table__row"
    >
      <td
        className="table__td"
      >
        Heikki
      </td>
      <td
        className="table__td"
      >
        Aakkoskoulu
      </td>
    </tr>
    <tr
      className="table__row"
    >
      <td
        className="table__td"
      >
        Aatu
      </td>
      <td
        className="table__td"
      >
        Deltakoulu
      </td>
    </tr>
  </thead>
</table>
`;

exports[`DataTable Renderöityy oikein 1`] = `
<table
  className="table"
>
  <thead
    className="table__head"
  >
    <tr
      className="table__row"
    >
      <th
        className="table__th"
      >
        <div
          className="table__label"
          onClick={[Function]}
        >
          Nimi
          <span
            className="table__sortindicator table__sortindicator--visible"
          >
            <i
              className="material-icons icon icon--inline"
            >
              arrow_drop_down
            </i>
          </span>
        </div>
      </th>
      <th
        className="table__th"
      >
        <div
          className="table__label"
          onClick={[Function]}
        >
          Oppilaitos
          <span
            className="table__sortindicator"
          />
        </div>
      </th>
    </tr>
  </thead>
  <thead
    className="table__body"
  >
    <tr
      className="table__row"
    >
      <td
        className="table__td"
      >
        Aatu
      </td>
      <td
        className="table__td"
      >
        Deltakoulu
      </td>
    </tr>
    <tr
      className="table__row"
    >
      <td
        className="table__td"
      >
        Heikki
      </td>
      <td
        className="table__td"
      >
        Aakkoskoulu
      </td>
    </tr>
    <tr
      className="table__row"
    >
      <td
        className="table__td"
      >
        Heli
      </td>
      <td
        className="table__td"
      >
        Beetakaroteenikoulu
      </td>
    </tr>
    <tr
      className="table__row"
    >
      <td
        className="table__td"
      >
        Osmo
      </td>
      <td
        className="table__td"
      >
        Celsiuksen koulu
      </td>
    </tr>
  </thead>
</table>
`;

exports[`DataTable Toisen sarakkeen nimen klikkaaminen järjestää sen mukaisesti 1`] = `
<table
  className="table"
>
  <thead
    className="table__head"
  >
    <tr
      className="table__row"
    >
      <th
        className="table__th"
      >
        <div
          className="table__label"
          onClick={[Function]}
        >
          Nimi
          <span
            className="table__sortindicator"
          />
        </div>
      </th>
      <th
        className="table__th"
      >
        <div
          className="table__label"
          onClick={[Function]}
        >
          Oppilaitos
          <span
            className="table__sortindicator table__sortindicator--visible"
          >
            <i
              className="material-icons icon icon--inline"
            >
              arrow_drop_down
            </i>
          </span>
        </div>
      </th>
    </tr>
  </thead>
  <thead
    className="table__body"
  >
    <tr
      className="table__row"
    >
      <td
        className="table__td"
      >
        Heikki
      </td>
      <td
        className="table__td"
      >
        Aakkoskoulu
      </td>
    </tr>
    <tr
      className="table__row"
    >
      <td
        className="table__td"
      >
        Heli
      </td>
      <td
        className="table__td"
      >
        Beetakaroteenikoulu
      </td>
    </tr>
    <tr
      className="table__row"
    >
      <td
        className="table__td"
      >
        Osmo
      </td>
      <td
        className="table__td"
      >
        Celsiuksen koulu
      </td>
    </tr>
    <tr
      className="table__row"
    >
      <td
        className="table__td"
      >
        Aatu
      </td>
      <td
        className="table__td"
      >
        Deltakoulu
      </td>
    </tr>
  </thead>
</table>
`;
